--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,7 +1,8 @@
-<div *ngIf="name">
+<div *ngIf="product">
   <h2>Product Details</h2>
-  <h3>{{ name }}</h3>
-  <div [ngSwitch]="name">
+  <h3>{{ product.name | uppercase }}</h3>
+  <span>{{ product.price | currency: 'EUR' }}</span>
+  <div [ngSwitch]="product.name">
     <p *ngSwitchCase="'Webcam'">Product is used for video</p>
     <p *ngSwitchCase="'Microphone'">Product is used for audio</p>
     <p *ngSwitchDefault>Product is for general use</p>
