--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -17,5 +17,8 @@
   <p>No product selected!</p>
 </ng-template>
 
+<h2>Favorites</h2>
+<app-favorites></app-favorites>
+
 <h3>Offers</h3>
 <ng-template appProductHost></ng-template>
