--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,9 +1,9 @@
 <h2>Product List</h2>
 <ul>
   <li
-    *ngFor="let product of products | sort; let i = index"
+    *ngFor="let product of (products$ | async)! | sort; let i = index"
     (click)="selectedProduct = product">
-    {{ i + 1 }}. {{ product.name }}
+    <{{ i + 1 }}. {{ product.name }}>
   </li>
 </ul>
 
